room-booking-system/web/src/css/style.css
/* ... */
section.container a.button:hover {

       background: #ed786a;
}
.center {
    text-align: center;
    margin:0 auto;
    display:flex;
    align-items:center;
    justify-content:center;
}
.left {
    text-align: left;
    margin:0 auto;
    display:flex;
    align-items:left;
    justify-content:left;
}

.p20 {
    padding:20px;
}
p, h1, h2, h3, h4, h5, h6, span, div{
    //font-family: DFKai-SB,"Times New Roman", Times, serif;
    font-family: "Microsoft JhengHei","STHeiti", Papyrus, Verdana, ;
}
#header-title{
    font-weight: 700;
    color: #ed786a;
    font-size: 3em;
    letter-spacing: 10px;
    text-align: center;
}
hr {
  margin-top: 80px;
  margin-bottom: 30px;
  border-top: 4px double gray;
  width:90%;

}

@media screen and (max-width: 1024px) {
    ul {
        margin: 0;
        padding: 0;
        list-style-type: none;
    }
    .left {
        display: inline-flex;
    }
    span, p {
        width:100%;
        text-align: center;
        margin:0 auto;
        display:flex;
        align-items:center;
        justify-content:center;
    }
    section.container div.row {
        display: block;
    }
    .button {
        width: 80%;
        min-width: auto;
        text-align: center;
        margin: 0 auto;
        margin-bottom: 10px;
        display:flex;
        align-items:center;
        justify-content:center;
    }
    .w50{
        width: 100% !important;
        text-align: center;
        margin:0 auto;
        display:flex;
        align-items:center;
        justify-content:center;

    }
    .w33{
        width: 100% !important;
        text-align: center;
        margin:0 auto;
        display:flex;
        align-items:center;
        justify-content:center;
    }
    .w25{
        width: 100% !important;
        text-align: center;
        margin:0 auto;
        display:flex;
        align-items:center;
        justify-content:center;

        padding-bottom:20px;
    }

    div.rbc-event-content p, div.rbc-event-content strong, div.rbc-event-label {
        display: None;
    }
    div.rbc-event-content{
        min-width: 5px;
        min-height: 50px;
    }
    div.rbc-event, div.rbc-event span{
        background:#3174ad;
        position:relative;
        animation:TestMove3 1.5s infinite alternate ease-out; /*IE*/
        -moz-animation:TestMove3 1.5s infinite alternate ease-out; /*FireFox*/
        -webkit-animation:TestMove3 1.5s infinite alternate ease-out; /*Chrome, Safari*/
    }
    @keyframes TestMove3{
        from {background-color:#3174ad;}
        to {background-color:#d2d3c9;}
    }
    @-moz-keyframes TestMove3{
        from {background-color:#3174ad;}
        to {background-color:#d2d3c9;}
    }
    @-webkit-keyframes TestMove3{
        from {background-color:#3174ad;}
        to {background-color:#d2d3c9;}
    }

}

